Fix layout issues

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -28,7 +28,7 @@
 .stats span {
   font-family: 'Antonio', sans-serif;
   font-size: 2.5rem;
-  letter-spacing: -0.09375rem;
+  letter-spacing: 0.019375rem;
   text-transform: uppercase;
 }
 
