--- a/src/styles/PlanetPage.scss
+++ b/src/styles/PlanetPage.scss
@@ -103,9 +103,6 @@ p{
   }
 
   p {
-    font-size: 0.6875rem;
-    line-height: 25px;
-    margin-bottom: 24px;
     text-align: center;
   }
 
@@ -115,17 +112,23 @@ p{
     grid-template-areas:
       "planet-image"
       "planet-info";
-    margin: 2.5rem auto;
+    margin: 2.5rem auto 1.5rem auto;
     position: relative;
   }
 
   .image-section {
     grid-area: planet-image;
     order: 2;
-    margin-top: 75px;
+    margin: 75px 0 25px 0;
 
     img {
       width: 50%;
+    }
+  }
+
+  @media screen and (max-width: 600px){
+    p{
+      font-size: 0.6875rem;
     }
   }
 
